Prose about model problems.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -170,6 +170,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cc77721a-05a7-48f0-8780-fa71734ff01e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "couchdb_host = \"127.0.0.1:5984\" # e.g., \"ACCOUNT.cloudant.com\" or \"localhost\"\n",
+    "couchdb_username = \"admin\"\n",
+    "couchdb_password = \"SU2orange!\"\n",
+    "ingest_db_name = \"skol_dev\"\n",
+    "taxon_db_name = \"skol_taxa_dev\"\n",
+    "json_taxon_db_name = \"skol_taxa_full_dev\"\n",
+    "embedding_name = 'skol:embedding:v1.1'\n",
+    "embedding_expire = 60 * 60 * 24  # Expire after 24 hours\n",
+    "\n",
+    "couchdb_url = f'http://{couchdb_host}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "994d34d5-1b5c-48b6-aa89-2ad6b015563a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark = SparkSession \\\n",
+    "    .builder \\\n",
+    "    .appName(\"CouchDB Spark SQL Example in Python using dataframes\") \\\n",
+    "    .master(\"local[2]\") \\\n",
+    "    .config(\"cloudant.protocol\", \"http\") \\\n",
+    "    .config(\"cloudant.host\", couchdb_host) \\\n",
+    "    .config(\"cloudant.username\", couchdb_username) \\\n",
+    "    .config(\"cloudant.password\", couchdb_password) \\\n",
+    "    .config(\"spark.jars.packages\", bahir_package) \\\n",
+    "    .config(\"spark.driver.memory\", \"16g\") \\\n",
+    "    .config(\"spark.executor.memory\", \"20g\") \\\n",
+    "    .config(\"spark.submit.pyFiles\",\n",
+    "            f'{parent_path / \"line.py\"},{parent_path / \"fileobj.py\"},'\n",
+    "            f'{parent_path / \"couchdb_file.py\"},{parent_path / \"finder.py\"},'\n",
+    "            f'{parent_path / \"taxon.py\"},{parent_path / \"paragraph.py\"},'\n",
+    "            f'{parent_path / \"label.py\"},{parent_path / \"file.py\"},'\n",
+    "            f'{parent_path / \"extract_taxa_to_couchdb.py\"}'\n",
+    "           ) \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "sc = spark.sparkContext\n",
+    "sc.setLogLevel(\"ERROR\") # Keeps the noise down!!!\n",
+    "\n",
+    "couch = couchdb.Server(couchdb_url)\n",
+    "couch.resource.credentials = (couchdb_username, couchdb_password)\n",
+    "\n",
+    "if ingest_db_name not in couch:\n",
+    "    db = couch.create(ingest_db_name)\n",
+    "else:\n",
+    "    db = couch[ingest_db_name]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "a9570ec3-8bb3-41af-99df-d96907293a36",
    "metadata": {},
@@ -244,48 +302,6 @@
     }
    ],
    "source": [
-    "couchdb_host = \"127.0.0.1:5984\" # e.g., \"ACCOUNT.cloudant.com\" or \"localhost\"\n",
-    "couchdb_username = \"admin\"\n",
-    "couchdb_password = \"SU2orange!\"\n",
-    "ingest_db_name = \"skol_dev\"\n",
-    "taxon_db_name = \"skol_taxa_dev\"\n",
-    "json_taxon_db_name = \"skol_taxa_full_dev\"\n",
-    "embedding_name = 'skol:embedding:v1.1'\n",
-    "embedding_expire = 60 * 60 * 24  # Expire after 24 hours\n",
-    "\n",
-    "couchdb_url = f'http://{couchdb_host}'\n",
-    "\n",
-    "spark = SparkSession \\\n",
-    "    .builder \\\n",
-    "    .appName(\"CouchDB Spark SQL Example in Python using dataframes\") \\\n",
-    "    .master(\"local[2]\") \\\n",
-    "    .config(\"cloudant.protocol\", \"http\") \\\n",
-    "    .config(\"cloudant.host\", couchdb_host) \\\n",
-    "    .config(\"cloudant.username\", couchdb_username) \\\n",
-    "    .config(\"cloudant.password\", couchdb_password) \\\n",
-    "    .config(\"spark.jars.packages\", bahir_package) \\\n",
-    "    .config(\"spark.driver.memory\", \"16g\") \\\n",
-    "    .config(\"spark.executor.memory\", \"20g\") \\\n",
-    "    .config(\"spark.submit.pyFiles\",\n",
-    "            f'{parent_path / \"line.py\"},{parent_path / \"fileobj.py\"},'\n",
-    "            f'{parent_path / \"couchdb_file.py\"},{parent_path / \"finder.py\"},'\n",
-    "            f'{parent_path / \"taxon.py\"},{parent_path / \"paragraph.py\"},'\n",
-    "            f'{parent_path / \"label.py\"},{parent_path / \"file.py\"},'\n",
-    "            f'{parent_path / \"extract_taxa_to_couchdb.py\"}'\n",
-    "           ) \\\n",
-    "    .getOrCreate()\n",
-    "\n",
-    "sc = spark.sparkContext\n",
-    "sc.setLogLevel(\"ERROR\") # Keeps the noise down!!!\n",
-    "\n",
-    "couch = couchdb.Server(couchdb_url)\n",
-    "couch.resource.credentials = (couchdb_username, couchdb_password)\n",
-    "\n",
-    "if ingest_db_name not in couch:\n",
-    "    db = couch.create(ingest_db_name)\n",
-    "else:\n",
-    "    db = couch[ingest_db_name]\n",
-    "\n",
     "user_agent = \"synoptickeyof.life\"\n",
     "\n",
     "ingenta_rp = RobotFileParser()\n",
@@ -309,13 +325,13 @@
     "\n",
     "### Source of many older public domain and open access works\n",
     "\n",
-    "Mycoweb includes scans of many older works in mycology. I have local copies but need to ingest them.\n",
+    "Mycoweb includes scans of many older works in mycology. I have local copies but need to write ingesters for them.\n",
     "\n",
     "* [Mycoweb](https://mykoweb.com/)\n",
     "\n",
     "### Journals in hand\n",
     "\n",
-    "These are journals we've collected over the years. The initial annotated issues are from early years of Mycotaxon. We still need to ingest all of these.\n",
+    "These are journals we've collected over the years. The initial annotated issues are from early years of Mycotaxon. We still need to write ingesters for all of these.\n",
     "\n",
     "* Mycologia (back issues)\n",
     "* [Mycologia at Taylor and Francis](https://www.tandfonline.com/journals/umyc20)\n",
@@ -391,7 +407,7 @@
     "            continue\n",
     "\n",
     "        if not rp.can_fetch(user_agent, doc['pdf_url']):\n",
-    "            # TODO(piggy): We should probably record blocked URLs.\n",
+    "            # TODO(piggy): We should probably log blocked URLs.\n",
     "            print(f\"Robot permission denied {doc['pdf_url']}\")\n",
     "            continue\n",
     "\n",
@@ -491,6 +507,7 @@
     "            full_filepath = os.path.join(dirpath, filename)\n",
     "            bibtex_link = f\"https://www.ingentaconnect.com/{full_filepath[len(str(root)):]}\"\n",
     "            with open(full_filepath) as f:\n",
+    "                # Paper over a syntax problem in Ingenta Connect Bibtex files.\n",
     "                content = f.read()\\\n",
     "                    .replace(\"\\\"\\nparent\", \"\\\",\\nparent\")\\\n",
     "                    .replace(\"\\n\", \"\")\n",
@@ -505,6 +522,7 @@
    },
    "source": [
     "# Mycotaxon\n",
+    "\n",
     "ingest_ingenta(db=db, rss_url='https://api.ingentaconnect.com/content/mtax/mt?format=rss', rp=ingenta_rp)"
    ]
   },
@@ -6387,6 +6405,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2769c280-8139-4228-b5a7-d21dab100910",
+   "metadata": {},
+   "source": [
+    "### Observations on the classification models\n",
+    "\n",
+    "The line-by-line classification model is classifying many Description lines as Misc-exposition. It works reasonably well for Nomenclature.\n",
+    "\n",
+    "The problem with the paragraph classification model is that the heuristic paragrph parser does not generalize well to the more modern journals.\n",
+    "\n",
+    "One possible approach to investigate is adding heuristics to the label-merging code to convert some Misc-exposition lines to Description if they are surrounded by Description paragraphs.\n",
+    "\n",
+    "A more sophisticated approach is to use a completely new model that has some memory, such as an RNN, or a two pass model that adds the label of the previous line(s) as added features for each line.\n",
+    "\n",
+    "It may become necessary to hand annotate some of the more modern journals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c95ee719-eb73-425b-ad44-6f30158c8d5e",
    "metadata": {},
    "source": [
@@ -6511,12 +6547,6 @@
    "source": [
     "### Run the mistral model to generate JSON from each Taxon description."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b7e6091-e188-4500-9e85-ccc18bb03fd8",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
