Move ports and names variables to a single location.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -181,8 +181,14 @@
     "ingest_db_name = \"skol_dev\"\n",
     "taxon_db_name = \"skol_taxa_dev\"\n",
     "json_taxon_db_name = \"skol_taxa_full_dev\"\n",
+    "\n",
+    "redis_host = 'localhost'\n",
+    "redis_port = 6379re\n",
+    "\n",
     "embedding_name = 'skol:embedding:v1.1'\n",
     "embedding_expire = 60 * 60 * 24  # Expire after 24 hours\n",
+    "classifier_model_name = \"skol:classifier:model:v1.4\"\n",
+    "classifier_model_expire = 60 * 60 * 24  # Expire after 1 day.\n",
     "\n",
     "couchdb_url = f'http://{couchdb_host}'"
    ]
@@ -5541,13 +5547,11 @@
     "# Train classifier on annotated data and save to Redis using SkolClassifierV2\n",
     "# Connect to Redis\n",
     "redis_client = redis.Redis(\n",
-    "    host='localhost',\n",
-    "    port=6379,\n",
+    "    host=redis_host,\n",
+    "    port=redis_port,\n",
     "    db=0,\n",
     "    decode_responses=False\n",
     ")\n",
-    "classifier_model_name = \"skol:classifier:model:v1.4\"\n",
-    "classifier_model_expire = 60 * 60 * 24  # Expire after 1 day.\n",
     "\n",
     "if not redis_client.exists(classifier_model_name):\n",
     "    # Get annotated training files\n",
