--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -5892,11 +5892,11 @@
     "        \"\"\"\n",
     "        # Format predictions\n",
     "        if \"annotated_value\" not in predictions.columns:\n",
-    "            predictions = YedaFormatter.format_predictions(predictions)\n",
+    "            predictions = YEDDAFormatter.format_predictions(predictions)\n",
     "\n",
     "        # Coalesce if requested\n",
     "        if coalesce_labels and line_level:\n",
-    "            predictions = YedaFormatter.coalesce_consecutive_labels(\n",
+    "            predictions = YEDDAFormatter.coalesce_consecutive_labels(\n",
     "                predictions, line_level=True\n",
     "            )\n",
     "            # For coalesced output, we have coalesced_annotations column\n",
@@ -6241,7 +6241,7 @@
    "source": [
     "## Extract the taxa names and descriptions\n",
     "\n",
-    "We use a classifier to extract taxa names and descriptions from articles, issues, and books. The YEDA annotated texts are written back to CouchDB."
+    "We use a classifier to extract taxa names and descriptions from articles, issues, and books. The YEDDA annotated texts are written back to CouchDB."
    ]
   },
   {
