Full run of clustering.

--- a/jupyter/ist769_skol.ipynb
+++ b/jupyter/ist769_skol.ipynb
@@ -3370,7 +3370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c26683a0-6879-44be-869a-a87748aac888",
    "metadata": {
     "scrolled": true
@@ -3393,7 +3393,12 @@
       "  Total nodes: 10477\n",
       "Storing tree in Neo4j...\n",
       "  Root name: Fungi\n",
-      "  Clearing existing Taxon and Pseudoclade nodes...\n"
+      "  Clearing existing Taxon and Pseudoclade nodes...\n",
+      "✓ Tree stored in Neo4j\n",
+      "  Taxon nodes: 5239\n",
+      "  Pseudoclade nodes: 5238\n",
+      "  PARENT_OF relationships: 10476\n",
+      "✓ Clustering complete!\n"
      ]
     }
    ],
